--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     
         <ul id="navbar">
             <li><a href="index.html">Why MagicMassage</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#reviews">Reviews</a></li>
-            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="#conditions">Features</a></li>
+            <li><a href="#reviewPage">Reviews</a></li>
+            <li><a href="#faqPage">FAQ</a></li>
             <button >Order now</button>
         </ul>
     
